FIND_PACKAGE(PCL REQUIRED COMPONENTS common io visualization filters )

FIND_PACKAGE(OpenCV 3.3.1 REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
ADD_DEFINITIONS(${PCL_DEFINITIONS})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS}
		    ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${PCL_LIBRARY_DIRS})

ADD_EXECUTABLE(main main.cpp)

ADD_LIBRARY(lidar_cam lidar_cam.cpp)

TARGET_LINK_LIBRARIES(main lidar_cam ${OpenCV_LIBS} ${PCL_FILTERS_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES})

